# geckoterminal-api

./: README.md  pyproject.toml
.github/workflows/: unittests.yml
geckoterminal_api/: __init__.py  api.py  async_api.py  exceptions.py  limits.py  parameter_validation.py  validation.py
tests/: test_api.py  test_async_api.py  test_exceptions.py  test_parameter_validation.py  test_validation.py
