[tool.poetry]
name = "geckoterminal-api"
version = "0.8.0"
repository = "https://github.com/dineshpinto/geckoterminal-api"
homepage = "https://github.com/dineshpinto/geckoterminal-api"
license = "MIT"
keywords = ["geckoterminal", "coingecko", "rest", "api", "async", "cryptocurrency", "bitcoin", "ethereum", "solana"]
description = "RESTful (sync + async) Python client for GeckoTerminal API"
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
readme = "README.md"
packages = [{ include = "geckoterminal_api" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
ruff-lsp = "^0.0.48"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle-error
    "W", # pycodestyle-warning
    "F", # pyflakes
    "N", # pep8-naming
    "B", # flake8-bugbear
    "I", # isort
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true